--- a/institutional_model_001/styles.css
+++ b/institutional_model_001/styles.css
@@ -59,17 +59,6 @@ nav a:hover {
     padding-bottom: 10px;
 }
 
-.slider {
-    background-color: var(--secondary-color);
-    padding: 20px 300px;
-    max-width: 100%;
-    overflow: hidden;
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
 .prev, .next {
     position: absolute;
     font-size: 2.5vh;
@@ -92,13 +81,24 @@ nav a:hover {
     right: 10%;
 }
 
-.slides {
+.image-slider {
+    background-color: var(--secondary-color);
+    padding: 20px 300px;
+    max-width: 100%;
+    overflow: hidden;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.image-slider-slides {
     position: relative;
     width: 100%;
     height: 100%;
 }
 
-.slide {
+.image-slider-slide {
     width: 100%;
     aspect-ratio: 16 / 9;
     overflow: hidden;
@@ -110,13 +110,13 @@ nav a:hover {
     transition: opacity 0.4s ease;
 }
 
-.slide.active {
+.image-slider-slide.active {
     position: relative;
     opacity: 1;
     z-index: 1;
 }
 
-.slide-image {
+.image-slider-image {
     width: 100%;
     height: 100%;
     object-fit: fill;
