--- a/institutional_model_001/styles.css
+++ b/institutional_model_001/styles.css
@@ -81,6 +81,14 @@ nav a:hover {
     right: 10%;
 }
 
+.content {
+    padding: var(--default-blocks-padding);
+}
+
+.content > div {
+    margin: 5% 0%;
+}
+
 .image-slider {
     background-color: var(--secondary-color);
     padding: 20px 300px;
@@ -124,40 +132,30 @@ nav a:hover {
     display: block;
 }
 
-.index-main, .index-sub {
-    padding: var(--default-blocks-padding);
-    margin: 5% 0%;
-}
-
-.index-main {
+.text-image {
     display: flex;
     flex-direction: row;
 }
 
-.index-main-title {
+.text-image-title {
 
 }
 
-.index-main-column-1, .index-main-column-2 {
+.text-image-text-column, .text-image-image-column {
     width: 50%;
 }
 
-.index-main-column-1 {
+.text-image-text-column {
     font-size: 2vh;
     text-align: justify;
 }
 
-.index-main-column-2 {
+.text-image-image-column {
     padding: 0% 5%;
 }
 
-.index-main-image {
+.text-image-image {
     width: 100%;
-}
-
-.index-sub {
-    display: flex;
-    flex-direction: column;
 }
 
 .card-slider-title {
